[project]
name = "room-generator"
version = "0.1.0"
description = "This app generates a set Inform 7 rooms."
authors = [
    { name="Jim Tyhurst", email="jim@tyhurst.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"

[project.urls]
"Source" = "https://github.com/jimtyhurst/room-generator.git"
"Bug Tracker" = "https://github.com/jimtyhurst/room-generator/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
